# LightchangerT

./: .gitignore  CSRF_PROTECTION.md  README.md  README.pt-BR.md  config.h  config.json  config_manager.h  config_manager.py  esp32.ino  esp32_client.py  esp32_integration.h  led_controller.h  led_controller.py  lightchanger.service  liveness.py  main.cpp  main.py  pyproject.toml  requirements.txt  scanner.py  steam_detector.h  steam_detector.py  web_config.py  web_ui.h
.github/workflows/: ci.yml
AI/: project_manifest.json  status.json
esp32/: README.md  basic_auth.h  captive_portal.h  config.h  config_manager.h  esp32.ino  led_controller.h  liveness_engine.h  main.cpp  network_scanner.h  ota_fw_update.h  steam_detector.h  web_ui.h
python/: colors.py  config.json  config_manager.py  esp32_client.py  led_controller.py  liveness.py  main.py  scanner.py  steam_detector.py  tuya_protocol.py  web_config.py
python/tests/: __init__.py  conftest.py  test_config_manager.py  test_esp32_client.py  test_integration.py  test_led_controller.py  test_liveness.py  test_scanner.py
tests/: conftest.py  test_integration.py  test_led_controller.py
