[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lightchangert"
version = "2.4.0"
description = "Network-aware LED controller for gaming consoles"
requires-python = ">=3.9"
dependencies = [
    "zeroconf>=4.2.0",
    "cryptography>=38.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "integration: marks integration tests",
]

[tool.ruff]
target-version = "py39"
line-length = 120
select = ["E", "F", "I", "N", "W", "S"]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.isort]
known-first-party = ["scanner", "liveness", "steam_detector", "led_controller", "esp32_client", "web_config", "config_manager", "colors"]